--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,24 @@
-# 📦 Dependencias
-node_modules/
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-
-# 🏗️ Builds
-dist/
-build/
-.cache/
-.next/
-out/
-
-# ⚙️ Configuración temporal
-*.env
-*.env.local
-*.env.development.local
-*.env.test.local
-*.env.production.local
-
-# 🗂️ Archivos de logs
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-# 🔥 Coverage de tests
-coverage/
+node_modules
+dist
+dist-ssr
+*.local
 
-# 💅 Archivos de editores/IDE
-.vscode/
-.idea/
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-.DS_Store
-Thumbs.db
-
-# 📄 Archivos de sistema
-*.log
-*.pid
-*.seed
-*.pid.lock
-
-# 📸 Storybook (si llegaran a usarlo)
-storybook-static/
-
-# 💻 Cache de TypeScript
-*.tsbuildinfo
-
-# 💾 Cache de herramientas
-.eslintcache
-.stylelintcache
-.parcel-cache
